<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
    android:dividerPadding="@dimen/small_text"
  android:paddingLeft="8dp"
  android:paddingRight="8dp">

  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
  >
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingRight="8dip"
      android:text="@string/firstname_label" />
    <EditText
      android:id="@+id/firstname_edit"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content" />
  </LinearLayout>

  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
  >
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingRight="8dip"
      android:text="@string/lastname_label" />
    <EditText
      android:id="@+id/lastname_edit"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content" />
  </LinearLayout>

  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
  >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="16dip"
        android:text="@string/gender_label" />
    <RadioGroup
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
    >
      <RadioButton
        android:id="@+id/male_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/male_label" />

      <RadioButton
        android:id="@+id/female_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/female_label" />
    </RadioGroup>
  </LinearLayout>

  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="16dip"
        android:text="@string/education_label" />
    <Spinner
        android:id="@+id/spinner_education"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />
  </LinearLayout>

  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="16dip"
        android:text="@string/pets_label" />
    <CheckBox
        android:id="@+id/checkBox_dog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/dog_label" />
    <CheckBox
        android:id="@+id/checkBox_cat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/cat_label" />
    <CheckBox
        android:id="@+id/checkBox_bird"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/bird_label" />
    <CheckBox
        android:id="@+id/checkBox_fish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/fish_label" />
  </LinearLayout>

  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
  >
    <Button
      android:id="@+id/ok_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/ok_label"
      android:onClick="onOKButtonClick"
      />
     <Button
      android:id="@+id/clear_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/clear_label"
      android:onClick="onClearButtonClick"
      />
     <Button
      android:id="@+id/list_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/list_label"
      android:onClick="onListButtonClick"
      />

  </LinearLayout>
</LinearLayout>
